<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mario.desafiodextra.view.impl.DetailActivity">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/imv_row_detail"
        android:layout_width="147dp"
        android:layout_height="141dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_row_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch_name"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imv_row_detail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_row_detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/lunch_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_row_detail_name" />

    <TextView
        android:id="@+id/tv_row_detail_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_row_detail_price"
        tools:text="@string/lunch_ingredients" />

    <Button
        android:id="@+id/bt_add_cart"
        android:layout_width="163dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/add_cart"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/bt_customize"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/customize"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
